--- a/Website/output/theme/gumby.css
+++ b/Website/output/theme/gumby.css
@@ -16,8 +16,8 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
+  font: inherit;
   font-size: 100%;
-  font-family: "Open Sans", sans-serif;, sans-serif;
   vertical-align: baseline;
 }
 
@@ -73,7 +73,7 @@ html * {
 
 body {
   background: white;
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
   font-weight: 400;
   color: #555555;
   position: relative;
@@ -94,10 +94,10 @@ html, body {
 }
 
 .ie9 {
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
 }
 .ie9 * {
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
 }
 
 .hide {
@@ -132,7 +132,7 @@ html, body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
   font-weight: 300;
   color: #444444;
   text-rendering: optimizeLegibility;
@@ -214,7 +214,7 @@ h6 {
   
   ======================================================*/
 p {
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
   font-weight: 400;
   font-size: 16px;
   font-size: 1rem;
@@ -1472,7 +1472,7 @@ img {
   width: auto;
   background: #f2f2f2;
   -webkit-appearance: none;
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
   font-weight: 600;
   padding: 0 !important;
   text-align: center;
@@ -4924,7 +4924,7 @@ form fieldset legend {
   outline: none;
   resize: none;
   -webkit-appearance: none;
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
   font-weight: 300;
   font-size: 16px;
   font-size: 1rem;
@@ -5062,7 +5062,7 @@ form fieldset legend {
   padding: 0 10px 0 10px;
   background: #f2f2f2;
   border: 1px solid #d8d8d8;
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
   font-weight: 600;
   color: #555555;
   font-size: 16px;
@@ -5312,7 +5312,7 @@ form fieldset legend {
   overflow: hidden;
   border: 1px solid #e5e5e5;
   border-radius: 4px;
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
   font-weight: 600;
   height: 36px;
   line-height: 34px;
@@ -5527,7 +5527,7 @@ form fieldset legend {
 
 .alert {
   padding: 0 10px;
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
   font-weight: 600;
   list-style-type: none;
   word-wrap: break-word;
@@ -5616,7 +5616,7 @@ form fieldset legend {
   padding: 0 16px;
   margin: 0;
   color: #555555;
-  font-family: "Open Sans", sans-serif;;
+  font-family: "Open Sans";
   font-weight: 600;
   border: 1px solid #e5e5e5;
   border-width: 1px 1px 0 1px;
